--- a/views/branson/CodeAmendment.handlebars
+++ b/views/branson/CodeAmendment.handlebars
@@ -135,8 +135,8 @@
 	</div>
 	<div  class="col-sm-10 form-group">
 		<select id="FinancialImpact" class="form-control" name="FinancialImpact" onChange="isOther('FinancialImpact')">
-            <option value="NoImpact">No Impact / Not Applicable</option>
-            <option value="BudgetedInCurrentYearBudget">Budgeted in the current year’s budget</option>
+            <option value="No Impact">No Impact / Not Applicable</option>
+            <option value="Budgeted In Current Year's Budget">Budgeted in the current year’s budget</option>
             <option value="Other">Other (See Additional Explanation)</option>
         </select> 
 	</div>
@@ -145,9 +145,9 @@
 		<label for="StaffRecommendation">Staff Recommendation:</label>
 	</div>
 	<div class="col-sm-10 form-group">
-		<select id="FinancialImpact" class="form-control" name="StaffRecommendation">
-            <option value="Yes">Recommended</option>
-            <option value="No">Not Recommended</option>
+		<select id="StaffRecommendations" class="form-control" name="StaffRecommendations">
+            <option value="Recommended">Recommended</option>
+            <option value="Not Recommended">Not Recommended</option>
             <option value="Neutral">Neutral/None</option>
         </select> 
 	</div>
