--- a/views/goodyear/City_Council_Action_request.handlebars
+++ b/views/goodyear/City_Council_Action_request.handlebars
@@ -31,13 +31,12 @@
 <input type="hidden" name="DeptIdHolder" id="DeptIdHolder" />
 <input type="hidden" name="DeptHeadId" id="DeptHeadId" />
 <input type="hidden" name="DivHeadId" id="DivHeadId" />
-<input type="hidden" name="Document1.DocumentType" id="Document1.DocumentType" value="7" />
-<input type="hidden" name="Document1.DocumentName" id="Document1.DocumentName" value="Staff Report P and Z New">
-
+<input type="hidden" name="Document1.DocumentType" id="Document1.DocumentType" value="6" />
+<input type="hidden" name="Document1.DocumentName" id="Document1.DocumentName" value="Staff Report_New">
 
 <legend>Meeting Information</legend>
 
-<div class="form-group  dataType" data-type="Meeting Select With Sections">
+<div class=" form-group dataType" data-type="Meeting Select With Sections">
 	<div class="row">
 		<label class="col-md-3 control-label col-centered" for="committeeSelect">Committee:</label>
 	</div>
@@ -45,7 +44,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<select id="committeeSelect" name="committeeSelect" class="form-control " disabled>
-				<option value="2">Planning & Zoning Commission</option>
+				<option value="1">City Council</option>
 			</select>
 		</div>
 	</div>
@@ -60,7 +59,11 @@
 		<select id="meetingTypeSelect" name="meetingTypeSelect" class="form-control" data-dependent-on="committeeSelect"
 			data-field-hasvalue="false" data-field-values="meetingTypes" onchange="prepMeeting(this.id)">
 			<option value="0">Select Meeting Type</option>
-			<option value="13">Planning & Zoning Commission</option>
+			<option value="1">City Council Regular Meeting</option>
+			<option value="2">City Council Special Meeting</option>
+			<option value="8">City Council Work Session</option>
+			<option value="23">City Council Subcommittee: Community Funding Review</option>
+			<option value="24">City Council Subcommittee: Executive Search Firm Selection</option>
 		</select>
 	</div>
 </div>
@@ -74,7 +77,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<select id="meetingDateSelect" name="meetingDateSelect" data-dependent-on="meetingTypeSelect"
-			onchange="setMeetingDate(this)" data-field-hasvalue="false" data-field-values="meetingDates"
+			onchange="setMeetingDate(this);" data-field-hasvalue="false" data-field-values="meetingDates"
 			class="form-control "></select>
 	</div>
 </div>
@@ -88,7 +91,12 @@
 <div class="row">
 	<div class="col-md-6">
 		<select id="meetingSectionSelect" name="meetingSectionSelect" data-dependent-on="meetingDateSelect"
-			data-field-hasvalue="false" data-field-values="meetingSections" class="form-control "></select>
+			data-field-hasvalue="false" data-field-values="meetingSections" class="form-control ">
+			<option value="1262">COMMUNICATIONS</option>
+			<option value="1263">CONSENT</option>
+			<option value="1264">BUSINESS</option>
+			<option value="1268">PUBLIC HEARINGS</option>
+		</select>
 	</div>
 </div>
 
@@ -155,23 +163,16 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<div class='form-group'>
-			<label for="Subject">SUBJECT:</label><span style="color: red;">*</span>
-			<textarea class="form-control" name="Subject" id="Subject" rows="10" cols="160"></textarea>
+			<label for="ItemTitle">SUBJECT:</label><span style="color: red;">*</span>
+			<textarea class="form-control" name="ItemTitle" id="ItemTitle" rows="10" cols="160"></textarea>
 		</div>
 	</div>
-	<div class='col-sm-12'>
-		<div class='form-group'>
-			<label for="CaseNumber">Case #</label><span style="color: red;">*</span>
-			<input type="text" id="CaseNumber" class="form-control" name="CaseNumber">
-		</div>
-	</div>
-
 </div>
 <div class='row'>
 	<div class='col-sm-12'>
 		<div class='form-group'>
 			<label for="Author">Requestor:</label><span style="color: red;">*</span>
-			<input class="form-control" id="Author" name="Author" type="text" disabled />
+			<input class="form-control" id="Author" name="Author" required="true" type="text" disabled />
 		</div>
 	</div>
 </div>
@@ -181,8 +182,9 @@
 			<label for="StaffPresenters">Staff Presenter(s):</label><span style="color: red;">*</span>
 			<div class="row">
 				<div class="col-sm-6">
-					<select class="form-control" id="internalUsers" onchange="selectUser(this.id)"></select>
-					<label for="CustomName">Add Other Presenter(s)</label>
+					<select class="form-control" id="internalUsers" onchange="selectUser(this.id)">
+					</select>
+					<label for="CustomName"> Other Presenter(s)</label>
 
 					<div class="input-group">
 						<input type="text" id="CustomName" name="CustomName" value="Name - Title" class="form-control"
@@ -192,9 +194,10 @@
 					</div>
 				</div>
 				<div id="presentersDisplay" class="col-sm-6 hidden">
-					<ul id="dynamicItemDisplay"></ul>
+					<ul id="dynamicItemDisplay">
+					</ul>
 					<span id="addPresenters" class="btn btn-primary" onclick="addPresenters()">Add Presenters</span>
-					<textarea class="form-control hidden" name="StaffPresenter" id="StaffPresenter"
+					<textarea class="form-control hidden" name="StaffPresenters" id="StaffPresenters"
 						rows="10"></textarea>
 				</div>
 			</div>
@@ -215,14 +218,6 @@
 		<div class='form-group'>
 			<label for="Recommendation">RECOMMENDATION</label><span style="color: red;">*</span>
 			<textarea class="form-control" name="Recommendation" id="Recommendation" rows="10" cols="160"></textarea>
-		</div>
-	</div>
-</div>
-<div class='row'>
-	<div class='col-sm-12'>
-		<div class='form-group'>
-			<label for="Location">Location</label><span style="color: red;">*</span>
-			<textarea class="form-control" name="Location" id="Location" rows="10" cols="160"></textarea>
 		</div>
 	</div>
 </div>
@@ -268,33 +263,31 @@
 	<small><small><small>Will not appear on CAR</small></small></small>
 </legend>
 <div class="row">
-	<!--Case #-->
-	<!--Planning Commission Meeting Date-->
 	<div class='col-sm-12'>
 		<div class='form-group'>
-			<label for="PlanningCommissionMtgDate">Planning Commission Meeting Date</label><span
+			<label for="ContractSentSeparately">Will contract be sent separately</label><span
 				style="color: red;">*</span>
-			<input id="PlanningCommissionMtgDate" type="date" class="PlanningCommissionMtgDate"
-				name="PlanningCommissionMtgDate">
+			<input id="ContractSentSeparatelyY" type="checkbox" class="ContractSentSeparately"
+				name="ContractSentSeparately" value="Yes"> Yes
+			<input id="ContractSentSeparatelyN" type="checkbox" class="ContractSentSeparately"
+				name="ContractSentSeparately" value="No"> No
 		</div>
 	</div>
-	<!--Land Use-->
 	<div class='col-sm-12'>
 		<div class='form-group'>
-			<label for="LandUse">Land Use?</label><span style="color: red;">*</span>
-			<input id="LandUseY" type="checkbox" class="LandUse" name="LandUse" value="Yes"> Yes
-			<input id="LandUseN" type="checkbox" class="LandUse" name="LandUse" value="No"> No
+			<label for="OrdinanceRequirePosting">Does ordinance require posting (if penal provisions or associated
+				fees/fines)?</label><span style="color: red;">*</span>
+			<input id="OrdinanceRequirePostingY" type="checkbox" class="OrdinanceRequirePosting"
+				name="OrdinanceRequirePosting" value="Yes"> Yes
+			<input id="OrdinanceRequirePostingN" type="checkbox" class="OrdinanceRequirePosting"
+				name="OrdinanceRequirePosting" value="No"> No
 		</div>
 	</div>
-	<!--Planning Commission Required-->
 	<div class='col-sm-12'>
 		<div class='form-group'>
-			<label for="PlanningCommissionRequired">Planning Commission Required?</label><span
-				style="color: red;">*</span>
-			<input id="PlanningCommissionRequiredY" type="checkbox" class="PlanningCommissionRequired"
-				name="PlanningCommissionRequired" value="Yes"> Yes
-			<input id="PlanningCommissionRequiredN" type="checkbox" class="PlanningCommissionRequired"
-				name="PlanningCommissionRequired" value="No"> No
+			<label for="RateFeeChange">Does item affect rate fees?</label><span style="color: red;">*</span>
+			<input id="RateFeeChangeY" type="checkbox" class="RateFeeChange" name="RateFeeChange" value="Yes"> Yes
+			<input id="RateFeeChangeN" type="checkbox" class="RateFeeChange" name="RateFeeChange" value="No"> No
 		</div>
 	</div>
 	<div class='col-sm-12'>
@@ -325,11 +318,11 @@
 				name="ExhibitsRequireSignature" value="No"> No
 		</div>
 	</div>
-	<div class='col-sm-12'>
+	<div class='col-sm-12 RequiredSignatures_yes'>
 		<div class='form-group'>
 			<label for="RequiredSignatures">Required Signatures?</label><span style="color: red;">*</span><br>
 			<input id="RequiredSignaturesMayor" type="checkbox" name="RequiredSignatures" value="Mayor"> <label
-				for="RequiredSignaturesMayor">Mayor</label><br>
+				for="RequiredSignaturesMayor"> Mayor</label><br>
 			<input id="RequiredSignaturesCityAttorney" type="checkbox" name="RequiredSignatures" value="City Attorney">
 			<label for="RequiredSignaturesCityAttorney"> City Attorney</label><br>
 			<input id="RequiredSignaturesCityManager" type="checkbox" name="RequiredSignatures" value="CityManager">
@@ -337,7 +330,7 @@
 			<input id="RequiredSignaturesProcurement" type="checkbox" name="RequiredSignatures" value="Procurement">
 			<label for="RequiredSignaturesProcurement"> Procurement</label><br>
 			<input id="RequiredSignaturesCityClerk" type="checkbox" name="RequiredSignatures" value="City Clerk"> <label
-				for="RequiredSignaturesCityClerk">City Clerk</label>
+				for="RequiredSignaturesCityClerk"> City Clerk</label>
 
 		</div>
 	</div>
@@ -459,7 +452,7 @@
 			<ul id="AccountCode_dynamicItemDisplay"></ul>
 			<span id="addAccCodes" class="btn btn-primary" onclick="addAccCodes()">Add Account Code(s)</span>
 
-			<textarea id="AccountCodes" name="AccountCodes" class="form-control hidden"
+			<textarea id="AccountCodes" name="AccountCodes" class="form-control hidden" disabled
 				placeholder="Added Account Code(s)"></textarea>
 		</div>
 	</div>
@@ -477,12 +470,10 @@
 		</div>
 		<div id="projectStringsDisplay" class="col-sm-6 hidden">
 			<ul id="ProjectString_dynamicItemDisplay"></ul>
-			<span id="addPjctStringCodes" class="btn btn-primary" onclick="addPjctStringCodes()">
-				Add Project
-				String(s)
-			</span>
+			<span id="addPjctStringCodes" class="btn btn-primary" onclick="addPjctStringCodes()">Add Project
+				String(s)</span>
 
-			<textarea id="ProjectStrings" name="ProjectStrings" class="form-control hidden"
+			<textarea id="ProjectStrings" name="ProjectStrings" class="form-control hidden" disabled
 				placeholder="Added Project String Code(s)"></textarea>
 		</div>
 
@@ -508,7 +499,6 @@
 		</div>
 	</div>
 </div>
-
 <script>
 	var url = window.location.protocol + "//" + window.location.host + "/",
 		department = [];
@@ -520,7 +510,7 @@
 		$('.ItemApproveContract_no').hide();
 		$('.TransmittalLetterRequired_no').hide();
 		$('.PublicationRequired').hide();
-
+		$('.RequiredSignatures_yes').hide();
 		$("textarea").attr('rows', '5');
 		$('[data-toggle="tooltip"]').tooltip();
 
@@ -531,10 +521,10 @@
 		$('#' + element).select();
 	}
 	function addPresenters() {
-		$('#StaffPresenter').html('');
+		$('#StaffPresenters').html('');
 		$('#dynamicItemDisplay').children('li').each(function (ind, val) {
 			var x = $(val).text();
-			$('#StaffPresenter').append(x + '\n')
+			$('#StaffPresenters').append(x + '\n')
 			$(val).addClass('text-success').css("font-weight", "600");
 		})
 		$('#addPresenters').html("Staff Presenter(s) Added")
@@ -568,11 +558,11 @@
 						ProjectStringArr.push(ProjectString.substring(i, i + 10));
 						console.log(ProjectStringArr)
 					}
-
+	
 					$('#ProjectString').val(ProjectStringArr[0] + '-' + ProjectStringArr[1] + '-' + ProjectStringArr[2])
 				}
 			}
-
+	
 		});
 	*/
 	function ProjectString() {
@@ -651,18 +641,25 @@
 		selectedBox = this.id;
 		$(".EmergencyClauseOrdinance").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
 	});
-	$(".ExhibitRequiresSignature").click(function () {
-		selectedBox = this.id;
-		$(".ExhibitRequiresSignature").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
-	});//
 	$(".ItemAmendCityCode").click(function () {
 		selectedBox = this.id;
 		$(".ItemAmendCityCode").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
 	});
 	$(".ExhibitsRequireSignature").click(function () {
-		selectedBox = this.id;
-		$(".ExhibitsRequireSignature").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
-	});
+        selectedBox = this.id;
+        $(".ExhibitsRequireSignature").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+
+        if (selectedBox == 'ExhibitsRequireSignatureN') {
+            console.log('no')
+            $('.RequiredSignatures_yes').hide();
+        } else {
+            console.log('yes')
+
+            $('.RequiredSignatures_yes').show();
+
+        }
+
+    });//
 	$(".TransmittalLetterRequired").click(function () {
 		selectedBox = this.id;
 		$(".TransmittalLetterRequired").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
