--- a/views/goodyear/index.handlebars
+++ b/views/goodyear/index.handlebars
@@ -1,12 +1,15 @@
 Choose the form
 <ul>
     <li>
-        <a href="/goodyear/Staff_Report_New">Staff Report New</a>
+        <a href="/goodyear/City_Council_Action_request">City Council Action Request (CAR)</a>
     </li>
     <li>
-        <a href="/goodyear/Staff_Report_P&Z_NEW">Staff_Report_P&Z_NEW</a>
+        <a href="/goodyear/P&ZCity_Council_Action_request">P&Z City Council Action Request (CAR)</a>
     </li>
     <li>
-        <a href="/goodyear/Communication_Items">Communication Items</a>
+        <a href="/goodyear/Communication_City_Council_Action_request">Communication City Council Action Request (CAR)</a>
+    </li>
+    <li>
+        <a href="/goodyear/CommunityFacilitiesDistrict">Community Facilities District (CFD)  </a>
     </li>
 </ul>
